fixed blurry header, put subscribe in header, made header static

--- a/css/main.css
+++ b/css/main.css
@@ -128,10 +128,16 @@ h3 {
 /*************************
 *******Header******
 **************************/
-
 #header {
     margin-bottom: 0;
-    padding: 30px 0 60px 0;
+    padding: 5px 80px 5px 80px;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: #fff;
+    position: fixed;
+    z-index: 100;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
 }
 
 #header .navbar-inverse .container {
@@ -160,6 +166,12 @@ h3 {
 
 #header .navbar-nav.navbar-right > li:last-child {
     margin-right: 20px;
+}
+
+.navbar-header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
 /*************************
@@ -272,17 +284,14 @@ h3 {
 
 #home-slider .main-slider {
     position: relative;
-    /*height: 450px;*/
     min-height: 400px;
     height: 100%;
 }
 
 #home-slider .slide-text {
-    /*position: absolute;*/
     text-align: center;
     top: 50px;
     left: 0;
-    /*width: 450px;*/
 }
 
 .animate-in .slide-text {
@@ -290,65 +299,7 @@ h3 {
     animation: fadeInLeftBig 700ms cubic-bezier(0.190, 1.000, 0.220, 1.000) 200ms both;
 }
 
-#home-slider .slider-hill {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-}
-
-.animate-in .slider-hill {
-    -webkit-animation: bounceInDown 1000ms ease-in-out 200ms both;
-    animation: bounceInDown 1000ms ease-in-out 200ms both;
-}
-
-#home-slider .slider-house {
-    position: absolute;
-    right: 110px;
-    bottom: -30px;
-}
-
-.animate-in .slider-house {
-    -webkit-animation: bounceInDown 500ms ease-in-out 800ms both;
-    animation: bounceInDown 500ms ease-in-out 800ms both;
-}
-
-#home-slider .slider-sun {
-    position: absolute;
-    right: 365px;
-    bottom: 100px;
-}
-
-.animate-in .slider-sun {
-    -webkit-animation: scaleIn 500ms ease-in-out 1200ms both;
-    animation: scaleIn 500ms ease-in-out 1200ms both;
-}
-
-#home-slider .slider-birds1 {
-    position: absolute;
-    right: 470px;
-    /*bottom: 75px;*/
-    bottom: 50px;
-}
-
-.animate-in .slider-birds1 {
-    -webkit-animation: fadeInLeft 500ms ease-in-out 1200ms both;
-    animation: fadeInLeft 500ms ease-in-out 1200ms both;
-}
-
-#home-slider .slider-birds2 {
-    position: absolute;
-    right: 40px;
-    /*bottom: 150px;*/
-    bottom: 100px;
-}
-
-.animate-in .slider-birds2 {
-    -webkit-animation: fadeInRight 500ms ease-in-out 1200ms both;
-    animation: fadeInRight 500ms ease-in-out 1200ms both;
-}
-
 #home-slider h1 {
-    /*margin-top: 100px;*/
     margin-top: 50px;
     margin-bottom: 25px;
 }
@@ -1009,6 +960,7 @@ h3.top-zero {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 160px;
 }
 
 .glyphicon {
@@ -1017,11 +969,30 @@ h3.top-zero {
     align-self: flex-end;
     line-height: 0;
 }
+
+.headerLogo {
+    height: 40px;
+}
+
 /*****************************/
 /*********** Mobile **********/
 /*****************************/
 /* Small */
 @media (max-width: 600px) {
+
+    .subscribe-header {
+        align-self: center;
+        padding: 1px 5% 0 0;
+    }
+
+    #header {
+        margin: 0;
+        padding: 0px 0px 0px 0px;
+    }
+
+    .navbar-header {
+        /*display: inline-block;*/
+    }
 
     .element{
         display: inline;
